@@ -48,6 +48,8 @@ import asyncio
 import aio_pika
 import json
 import os
+
+from geotool_db_api.common import create_pool_a
 from geotool_db_api.device_api import get_update_firmware_coroutine
 from geotool_db_api.device_api import get_device_id
 
@@ -93,6 +95,7 @@ async def main(loop):
 
 if __name__ == "__main__":
     loop = asyncio.get_event_loop()
+    loop.run_until_complete(create_pool_a())
     print("Firmware update processsor has started.")
     loop.run_until_complete(main(loop))
     loop.close()
