@@ -7,6 +7,8 @@ import datetime
 import os
 import base64
 import logging
+
+from geotool_db_api.common import create_pool_a
 from geotool_db_api.device_api import get_insert_deviceupdate_coroutine
 from geotool_db_api.device_api import get_update_deviceupdatecache_coroutine, get_device_id
 from meitrack.file_download import FileDownloadAggregator
@@ -84,6 +86,7 @@ async def main(loop, file_agg):
 if __name__ == "__main__":
     main_file_agg = FileDownloadAggregator()
     main_loop = asyncio.get_event_loop()
+    main_loop.run_until_complete(create_pool_a())
     print("Meitrack file fragment processor has started.")
     main_loop.run_until_complete(main(main_loop, main_file_agg))
     main_loop.close()
