@@ -33,9 +33,10 @@ setup(
             "cachetools",
             "python-memcached",
             'pika',
+            'aio_pika',
             'geotooldbapi>=1.5',
             'geotoolapi>=1.22',
-            'meitrackparser>=1.14',
+            'meitrackparser>=1.15',
             'celery',
             'kombu',
             # 'geotool_api==1.0',
